# kasvillage

./: .gitignore  Cargo.Toml  Cargo.toml  Dockerfile  README.md  index.html  package.json
.github/workflows/: build-and-push.yml  build-ui.yml  docker-build.yml  docker-publish.yml
.idx/: dev.nix
akash/: backend-deploy.yaml
backend/: Cargo.toml
backend/src/: main.rs
docker/: .dockerignore  Dockerfile.tier1-frontend  Dockerfile.tier3-validator  Dockerfile.ui
flux/: tier1-frontend.toml
frontend/: Chunks.jsx  eslint.config.js  index.html  package-lock.json  package.json
frontend/docker/: Dockerfile.ui
frontend/nginx/: nginx.conf
frontend/src/: Secp256k1.js  Xp.js  app.jsx  bridge.js  index.css  main.jsx  postcss.config.js  tailwind.config.js
github/workflows/: build-ui.yml
nginx/: nginx.conf
src/: Chunks.jsx  Secp256k1.js  Xp.js  app.jsx  bridge.js  index.css  lib.rs  main.rs
