[package]
name = "kasvillage"
version = "1.0.0"
edition = "2021"
authors = ["Wayne <wayne@kasvillage.dev>"]
description = "KasVillage L2 - Non-Custodial Kaspa Layer 2 with FROST Threshold Signatures"
repository = "https://github.com/kaspanet/kasvillage"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Cryptography - Curves
pasta_curves = "0.5"
k256 = { version = "0.13", features = ["ecdsa"] }
group = "0.13"
ff = "0.13"

# Cryptography - FROST
frost_secp256k1 = "1.0"

# Cryptography - ZK Proofs
# Note: Using git dependencies might slow down builds, but is often necessary for Halo2
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", branch = "main" }
neptune = { version = "0.8", features = ["pasta"] }

# Hashing & Encoding
blake2 = "0.10"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
bech32 = "0.11"
base64 = "0.21"
serde_big_array = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Math
num-bigint = "0.4"
num-traits = "0.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP & Web
actix-web = "4"
actix-rt = "2"
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.21"

# Database
firestore = "0.20"
rusqlite = { version = "0.30", features = ["bundled"] }

# Rate limiting & caching
redis = { version = "0.25", features = ["aio"] }
lru = "0.12"

# Notifications
pyo3 = { version = "0.20", features = ["extension-module"] }

# Logging & Monitoring
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus = "0.13"

# Misc
lazy_static = "1.4"
rand_core_legacy = "0.6"
generic-array = "0.14"
typenum = "1.17"
subtle = "2.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
default = ["full"]
full = ["l2-frontend", "kaspa-node", "validators"]
l2-frontend = []  # Public API only
kaspa-node = []   # Kaspa L1 node integration
validators = []   # FROST validator signing
testnet = []      # Testnet mode
mainnet = []      # Mainnet mode

# --- BINARY DEFINITIONS ---
# These tell the Dockerfile where to find the code!

[[bin]]
name = "kasvillage-l2"
path = "src/bin/l2_frontend.rs"
required-features = ["l2-frontend"]

[[bin]]
name = "kasvillage-node"
path = "src/bin/kaspa_node.rs"
required-features = ["kaspa-node"]

[[bin]]
name = "kasvillage-validator"
path = "src/bin/validator.rs"
required-features = ["validators"]

[lib]
name = "kasvillage"
path = "src/lib.rs"
