cargo-features = ["edition2024"]

[package]
name = "kasvillage-l2"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
# --- AWS ---
aws-config = "1.1"
aws-sdk-s3 = "1.14"

# --- Core ---
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
num_cpus = "1.16"

# --- Web ---
actix-web = "4.5"
actix-rt = "2.9"
actix-web-actors = "4.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "multipart"] }
actix = "0.13.5"
axum = "0.7"

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
serde-big-array = "0.5.1"
bincode = "1.3"
hex = "0.4"
base64 = "0.22"

# --- Database ---
rusqlite = { version = "0.31", features = ["bundled"] }

# --- Crypto ---
k256 = { version = "0.13.4", features = ["arithmetic", "ecdsa", "schnorr", "serde", "ecdh"] }
sha2 = "0.10"
blake2 = "0.10"
ripemd = "0.1"
hmac = "0.12"
bech32 = "0.9"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"
getrandom = "0.2"
hkdf = "0.12.4"

# --- L2 Crypto ---
frost-secp256k1 = "1.0.0"
halo2_proofs = "0.3.0"
pasta_curves = { version = "0.5", features = ["repr-c", "serde"] }
ff = "0.13"
group = "0.13"
subtle = "2.5"
neptune = "10.0.0"
rand_core_legacy = { package = "rand_core", version = "0.6" }

# --- Utils ---
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
generic-array = "1.3.5"
num-traits = "0.2.19"
num-bigint = "0.4.6"
